--- a/assets/sass/post.scss
+++ b/assets/sass/post.scss
@@ -177,6 +177,8 @@ div.post {
             padding: 0 0 0.5em 0;
             font-weight: 500;
             border-bottom: 1px solid #CCC;
+            text-align: left;
+            vertical-align: bottom;
         }
 
         td {
